<resources>
    <string name="app_name">drdr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">خانه</string>
    <string name="stethoskop">پزشکان</string>
    <string name="calendar">نوبت ها</string>
    <string name="profile">پروفایل</string>
    <string name="version">نسخه :</string>
    <string name="Retry">تلاش مجدد</string>
    <string name="txt_action">اتصال اینترنتی خود را بررسی کنید!</string>
    <string name="txt_des">بیش از 17,000 پزشک متخصص&#xA;در دکتردکتر کنار شما هستند</string>
    <string name="search">جستجو کنید</string>
    <string name="tehran">تهران</string>
    <string name="tools_txt">دکتر سارا موسوی لاریجانی</string>
    <string name="txt_expertise">تخصص بیماری‌های پوست (درماتولوژی (phd)</string>
    <string name="consultation">مدت زمان مشاوره :</string>
    <string name="minute">دقیقه</string>
    <string name="ready_to_answer">آماده پاسخگویی</string>
    <string name="txt_frequent_searches">جستجو‌های پرتکرار:</string>
    <string name="txt_urgent">ویزیت فوری پزشک</string>
    <string name="responsiveness">پاسخگویی :</string>
    <string name="urgent_de">امکان ارسال پیام و فایل تا ۲۴ ساعت بعد از مشاوره</string>
    <string name="tools_doctor_name">دکتر لیلا حافظی</string>
    <string name="tools_waiting">میانگین زمان انتظار</string>
    <string name="duration_waiting">1 ساعت</string>
    <string name="turn">اولین نوبت خالی</string>
    <string name="txt_location">آیت الله کاشانی، بین اباذر و مهران، پلاک69، واحد 20، طبقه 5</string>
    <string name="txt_get_turn">دریافت نوبت</string>
    <string name="txt_introduction">معرفی پزشکان</string>
    <string name="introduction_de">نوبت‌دهی اینترنتی و رایگان از پزشکان سراسر ایران\n</string>
    <string name="show_all">نمایش همه</string>
    <string name="txt_clinic">کلینیک و مراکز درمانی</string>
    <string name="clinic_de">دریافت خدمات از مراکز درمانی سراسر کشور</string>
    <string name="txt_comment">نظرات کاربران دکتردکتر\n</string>
    <string name="comment_de">بیش از ۷ میلیون کاربر از خدمات دکتردکتر استفاده کرده‌اند</string>
    <string name="txt_comment_default">\" من و پسرم برای درمان اختلالات ذهنی و نقشه مغزی یک دوره کامل را پیش ایشان گذراندیم بسیار خوش برخورد و با صبر و حوصله و با سواد هستند، کمک زیادی برای درمان ما انجام دادند. \"\n</string>
    <string name="txt_reference">مراجعه</string>
    <string name="user_doctor">کاربر دکتردکتر</string>
    <string name="innings">نوبت های من</string>
    <string name="turn_type">نوع نوبت :</string>
    <!--tablelayout text-->
    <string name="all_txt">همه</string>
    <string name="txt_verbal">حضوری</string>
    <string name="txt_phone">تلفنی</string>
    <string name="txt_chat">متنی</string>
    <string name="tracking_code">کد رهگیری :</string>
    <string name="time_verbal">زمان نوبت :</string>
    <string name="address">آدرس مطب :</string>
    <string name="phone_numbers">شماره مطب :</string>
    <string name="sick">نام بیمار :</string>
    <string name="total_amount">مبلغ کل پرداخت شده :</string>
    <string name="reservation">مبلغ رزرو نوبت :</string>
    <string name="txt_empty">چیزی برای نمایش وجود نداره!!</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="my_turns">نوبت های من</string>
    <string name="comment_me">نظرات من</string>
    <string name="doctor_book">لیست پزشکان من</string>
    <string name="view">مشاهده</string>
    <string name="doctor_enable">لیست تخصص های پزشکی فعال</string>
</resources>