<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_192mdp"
        android:orientation="horizontal"
        app:shimmer_auto_start="true"
        app:layout_constraintTop_toTopOf="parent"
        app:shimmer_direction="right_to_left"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <include layout="@layout/doctor_placeholder_layout" />

            <include layout="@layout/doctor_placeholder_layout" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <!--Title-->
    <TextView
        android:id="@+id/urgent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15mdp"
        android:gravity="center_vertical"
        android:text="@string/txt_urgent"
        android:textAppearance="@style/TextAppearance_Bold"
        android:textColor="@color/North_Texas_Green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--show all-->
    <TextView
        android:id="@+id/show_urgent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15mdp"
        android:gravity="center_vertical"
        android:text="@string/show_all"
        android:textAppearance="@style/TextAppearance_light"
        android:textColor="@color/North_Texas_Green"
        app:drawableEndCompat="@drawable/arrow_left"
        app:drawableTint="@color/North_Texas_Green"
        android:drawablePadding="@dimen/_4mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/urgent_title" />

    <TextView
        android:id="@+id/urgent_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15mdp"
        android:gravity="center_vertical"
        android:text="@string/urgent_de"
        android:textAppearance="@style/TextAppearance_mobile_bold"
        android:textColor="@color/Outer_Space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/urgent_title"
        />
    <!--Show all-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/urgent_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8mdp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/urgent_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>